loading added in main

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ REACT_APP_projectId=reactmovieapp1
 REACT_APP_storageBucket=reactmovieapp1.appspot.com
 REACT_APP_messagingSenderId=476237742096
 REACT_APP_appId=1:476237742096:web:f6c6538917aa53bd2d8a95
-REACT_APP_TMDB_KEY=
+REACT_APP_TMDB_KEY=892801fefc2003b822876ca026610123
 
